--- a/iDM-freze-out/relevant-codes/README
+++ b/iDM-freze-out/relevant-codes/README
@@ -22,7 +22,7 @@ epsilon^2=1E-6 and gives me the same result as Gordan.. look at the previous fol
 
 
 
-(* ******************************** *)
+* ******************************** *)
 (* ****      NP Lagrangian     **** *)
 (* ******************************** *)
 
@@ -51,8 +51,7 @@ epsilon^2=1E-6 and gives me the same result as Gordan.. look at the previous fol
            - e0 epsilondark ebar[sp1] Ga[mu,sp1,sp2] e[sp2] X0[mu]
            - e0 epsilondark mubar[sp1] Ga[mu,sp1,sp2] mu[sp2] X0[mu]
 
-           + I gX QX X2bar.Ga[mu].X1  ( (cbeta/cchi) X0[mu] + ((Sqrt[1-cbeta^2])/cchi) Z[mu] )   
-           (* iDM vector interaction, I have added the Z mediated interaction as well *)
+           + I gX QX X2bar.Ga[mu].X1  ( (cbeta/cchi) X0[mu] + ((Sqrt[1-cbeta^2])/cchi) Z[mu] )   (* iDM vector interaction, I have added the Z mediated interaction as well *)
 
            + Ychi (S0 cos(thetascalar) - H sin(thetascalar)) ( X2bar[sp1] X2[sp1] + X1bar[sp1] X1[sp1])    (* iDM scalar interaction *)
 
@@ -60,47 +59,50 @@ epsilon^2=1E-6 and gives me the same result as Gordan.. look at the previous fol
 
 
 
-           - ( HNL4bar[sp1] Ga[mu,sp1,sp2] (c_44 Z[mu]+ d_44 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL4[sp3] ) + 
-           ( HNL4bar[sp1] Ga[mu,sp1,sp2] (c_45 Z[mu]+ d_45 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL5[sp3] ) + 
-           ( HNL4bar[sp1] Ga[mu,sp1,sp2] (c_46 Z[mu]+ d_46 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL6[sp3] ) + 
-           ( HNL5bar[sp1] Ga[mu,sp1,sp2] (c_54 Z[mu]+ d_54 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL4[sp3] ) + 
-           ( HNL5bar[sp1] Ga[mu,sp1,sp2] (c_55 Z[mu]+ d_55 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL5[sp3] ) + 
-           ( HNL5bar[sp1] Ga[mu,sp1,sp2] (c_56 Z[mu]+ d_56 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL6[sp3] ) + 
-           ( HNL6bar[sp1] Ga[mu,sp1,sp2] (c_64 Z[mu]+ d_64 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL4[sp3] ) + 
-           ( HNL6bar[sp1] Ga[mu,sp1,sp2] (c_65 Z[mu]+ d_65 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL5[sp3] ) + 
-           ( HNL6bar[sp1] Ga[mu,sp1,sp2] (c_66 Z[mu]+ d_66 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL6[sp3] )     
+           - ( HNL4bar[sp1] Ga[mu,sp1,sp2] (c_44 Z[mu]+ d_44 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL4[sp3] ) 
+           + ( HNL4bar[sp1] Ga[mu,sp1,sp2] (c_45 Z[mu]+ d_45 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL5[sp3] ) 
+           + ( HNL4bar[sp1] Ga[mu,sp1,sp2] (c_46 Z[mu]+ d_46 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL6[sp3] ) 
+           + ( HNL5bar[sp1] Ga[mu,sp1,sp2] (c_54 Z[mu]+ d_54 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL4[sp3] ) 
+           + ( HNL5bar[sp1] Ga[mu,sp1,sp2] (c_55 Z[mu]+ d_55 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL5[sp3] ) 
+           + ( HNL5bar[sp1] Ga[mu,sp1,sp2] (c_56 Z[mu]+ d_56 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL6[sp3] ) 
+           + ( HNL6bar[sp1] Ga[mu,sp1,sp2] (c_64 Z[mu]+ d_64 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL4[sp3] ) 
+           + ( HNL6bar[sp1] Ga[mu,sp1,sp2] (c_65 Z[mu]+ d_65 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL5[sp3] ) 
+           + ( HNL6bar[sp1] Ga[mu,sp1,sp2] (c_66 Z[mu]+ d_66 X0[mu]) ((1-Ga[5,sp2,sp3])/2) HNL6[sp3] )  
            (* Neutrino vectorial interaction under L-R symmetry *)
 
 
 
-            - ( (HNL4bar[sp1] HNL4[sp2] Deltah_44) + (HNL4bar[sp1] HNL5[sp2] Deltah_45) + (HNL4bar[sp1] HNL6[sp2] Deltah_46) 
-            + (HNL5bar[sp1] HNL4[sp2] Deltah_54) + (HNL5bar[sp1] HNL5[sp2] Deltah_55) + (HNL5bar[sp1] HNL6[sp2] Deltah_56) 
-            + (HNL6bar[sp1] HNL4[sp2] Deltah_64) + (HNL6bar[sp1] HNL5[sp2] Deltah_65) + (HNL6bar[sp1] HNL6[sp2] Deltah_66) 
-            + (DNbar[sp1] HNL4[sp2] Deltah_4DN) + (DNbar[sp1] HNL5[sp2] Deltah_5DN) + (DNbar[sp1] HNL6[sp2] Deltah_6DN) ) 
+            - ( (HNL4bar[sp1] nu3[sp2] Deltah_43) + (HNL4bar[sp1] HNL4[sp2] Deltah_44) + (HNL4bar[sp1] HNL5[sp2] Deltah_45) 
+            + (HNL4bar[sp1] HNL6[sp2] Deltah_46) + (HNL5bar[sp1] nu3[sp2] Deltah_53) + (HNL5bar[sp1] HNL4[sp2] Deltah_54) 
+            + (HNL5bar[sp1] HNL5[sp2] Deltah_55) + (HNL5bar[sp1] HNL6[sp2] Deltah_56) + (HNL6bar[sp1] nu3[sp2] Deltah_63) 
+            +(HNL6bar[sp1] HNL4[sp2] Deltah_64) + (HNL6bar[sp1] HNL5[sp2] Deltah_65) + (HNL6bar[sp1] HNL6[sp2] Deltah_66) 
+            + (HNL4bar[sp1] DN[sp2] Deltah_4DN) + (HNL5bar[sp1] DN[sp2] Deltah_5DN) + (HNL6bar[sp1] DN[sp2] Deltah_6DN) ) 
             * (H cos(thetascalar) + S0 sin(thetascalar))       (* NEUTRINO SCALAR VERTICIES higgs *)
 
 
 
 
-            - ( (HNL4bar[sp1] HNL4[sp2] Deltaphi_44 ) + (HNL4bar[sp1] HNL5[sp2] Deltaphi_45 ) + (HNL4bar[sp1] HNL6[sp2] Deltaphi_46 ) 
+            - ( (nu3bar[sp1] HNL4[sp2] Deltaphi_34 ) + (nu3bar[sp1] HNL5[sp2] Deltaphi_35 ) + (nu3bar[sp1] HNL6[sp2] Deltaphi_36 ) 
+            + (HNL4bar[sp1] HNL4[sp2] Deltaphi_44 ) + (HNL4bar[sp1] HNL5[sp2] Deltaphi_45 ) + (HNL4bar[sp1] HNL6[sp2] Deltaphi_46 ) 
             + (HNL5bar[sp1] HNL4[sp2] Deltaphi_54 ) + (HNL5bar[sp1] HNL5[sp2] Deltaphi_55 ) + (HNL5bar[sp1] HNL6[sp2] Deltaphi_56 ) 
             + (HNL6bar[sp1] HNL4[sp2] Deltaphi_64 ) + (HNL6bar[sp1] HNL5[sp2] Deltaphi_65 ) + (HNL6bar[sp1] HNL6[sp2] Deltaphi_66 ) 
             + (DNbar[sp1] HNL4[sp2] Deltaphi_DN4 ) + (DNbar[sp1] HNL5[sp2] Deltaphi_DN5 ) + (DNbar[sp1] HNL6[sp2] Deltaphi_DN6 )  ) 
             * (S0 cos(thetascalar) - H sin(thetascalar))          (* NEUTRINO SCALAR VERTICIES dark scalar *)
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            (*  External parameters *)
-            
-            
 
+
+           
+
+                              ]
+                ];
+            
+            
+            
+            
+            
+            
+            
+            
+            
   gX == {                                                                          (*   >>>>>   HERE!   <<<<<   *)                                                                         
     ParameterType    -> External, 
     BlockName        -> NP,
@@ -235,17 +237,38 @@ epsilon^2=1E-6 and gives me the same result as Gordan.. look at the previous fol
     Value            -> 0.1,
     Description      -> "U_DNHNL6"
   },                                                (*   >>>>>   HERE! Nico  <<<<<   *)
-            
-            
-            
-            
-            
-            
-            
-            
-            
-            
-             (* Internal Parameters *)
+
+
+
+
+  sw0 == {
+    ParameterType    -> External, 
+    BlockName        -> NP,
+    Value            -> Sqrt[0.2311],
+    Description      -> "sine_weak"
+  },
+  cw0 == {
+    ParameterType    -> External, 
+    BlockName        -> NP,
+    Value            -> Sqrt[1-0.2311],
+    Description      -> "cos_weak"
+  },
+  gw0 == {
+    ParameterType    -> External, 
+    BlockName        -> NP,
+    Value            -> 0.629927,
+    Description      -> "g_weak"
+  },                                                                               (*   >>>>>   HERE!   <<<<<   *)
+  e0 == { 
+    ParameterType    -> External, 
+    Value            -> Sqrt[4 Pi 127.7],                                          (*   >>>>>   HERE! Correct?   <<<<<   *)
+    InteractionOrder -> {QED,1}, 
+    TeX              -> e0,  
+    Description      -> "Electric coupling constant"
+  },
+
+
+  (* Internal Parameters *)
 
 
  c44 == {
@@ -369,7 +392,12 @@ c66 == {
 
 
 
-
+ Deltah_43 == {
+    ParameterType    -> Internal, 
+    BlockName        -> NP,
+    Value            -> (1/Sqrt[2])* U_nu3HNL4 *(Sqrt[2]*mnu3/vevscal)* U_nu3HNL4 ,   (* There should be an other term, but for L-R symmetry is zero *)
+    Description      -> "Deltah_43"
+  },
   Deltah_44 == {
     ParameterType    -> Internal, 
     BlockName        -> NP,
@@ -388,6 +416,12 @@ c66 == {
     Value            -> (1/Sqrt[2])* U_nu3HNL4 *(Sqrt[2]*mnu3/vevscal)* U_HNL4HNL6,   (* There should be an other term, but for L-R symmetry is zero *)
     Description      -> "Deltah_46"
   },
+ Deltah_53 == {
+    ParameterType    -> Internal, 
+    BlockName        -> NP,
+    Value            -> (1/Sqrt[2])* U_nu3HNL5 *(Sqrt[2]*mnu3/vevscal)* U_nu3HNL5 ,   (* There should be an other term, but for L-R symmetry is zero *)
+    Description      -> "Deltah_53"
+  },
   Deltah_54 == {
     ParameterType    -> Internal, 
     BlockName        -> NP,
@@ -405,6 +439,12 @@ c66 == {
     BlockName        -> NP,
     Value            -> (1/Sqrt[2])* U_nu3HNL5 *(Sqrt[2]*mnu3/vevscal)* U_HNL5HNL6,   (* There should be an other term, but for L-R symmetry is zero *)
     Description      -> "Deltah_56"
+  },
+ Deltah_63 == {
+    ParameterType    -> Internal, 
+    BlockName        -> NP,
+    Value            -> (1/Sqrt[2])* U_nu3HNL6 *(Sqrt[2]*mnu3/vevscal)* U_nu3HNL6 ,   (* There should be an other term, but for L-R symmetry is zero *)
+    Description      -> "Deltah_63"
   },
   Deltah_64 == {
     ParameterType    -> Internal, 
@@ -444,6 +484,25 @@ c66 == {
   },
 
 
+
+  Deltaphi_34 == {
+    ParameterType    -> Internal, 
+    BlockName        -> NP,
+    Value            -> (2/Sqrt[2])* U_nu3HNL4 *(Sqrt[2]*mDN/vevscal)* U_DNHNL4,   (* There should be an other term, but for L-R symmetry is zero *)
+    Description      -> "Deltaphi_34"
+  },
+  Deltaphi_35 == {
+    ParameterType    -> Internal, 
+    BlockName        -> NP,
+    Value            -> (2/Sqrt[2])* U_nu3HNL5 *(Sqrt[2]*mDN/vevscal)* U_DNHNL5,   (* There should be an other term, but for L-R symmetry is zero *)
+    Description      -> "Deltaphi_35"
+  },
+  Deltaphi_36 == {
+    ParameterType    -> Internal, 
+    BlockName        -> NP,
+    Value            -> (2/Sqrt[2])* U_nu3HNL6 *(Sqrt[2]*mDN/vevscal)* U_DNHNL6,   (* There should be an other term, but for L-R symmetry is zero *)
+    Description      -> "Deltaphi_36"
+  },
   Deltaphi_44 == {
     ParameterType    -> Internal, 
     BlockName        -> NP,
