--- a/iDM-freze-out/relevant-codes/sin_chi.ipynb
+++ b/iDM-freze-out/relevant-codes/sin_chi.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "4f656ed2",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
     "alpha_em=1/137\n",
     "\n",
     "\n",
-    "theta_W=29\n",
+    "theta_W= (29/180)*np.pi     # 29\n",
     "mass_Z=91.1876   # GeV\n",
     "g_W=0.641\n",
     "chi=epsilon/np.cos(theta_W)\n",
@@ -120,17 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "95a0a4e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0000007951332357"
+       "1.0000006152220209"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "1b910c56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0000015902671036"
+       "1.0000012304444204"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "972b6d8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0004435735009141385"
+       "0.0002771556308328054"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,17 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "f39fa2ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.9675745071322526e-07"
+       "7.681524370233031e-08"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "860e7f50",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "ad5e32cb",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "7.872503840245774e-09"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "77679b31",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "3.936251920122887e-09"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "493c8377",
    "metadata": {},
    "outputs": [
@@ -278,6 +278,55 @@
    "source": [
     "print(np.sin(theta_scalar))\n",
     "print(np.cos(theta_scalar))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e645eb2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.009589039741416241\n",
+      "0.001\n",
+      "0.00114335406787332\n",
+      "0.8746197071393957\n"
+     ]
+    }
+   ],
+   "source": [
+    "dVf=(g_W/(2*np.cos(theta_W)))*(np.cos(theta_W)*(2*(np.sin(theta_W)**2)-0.5)+(3/2)*np.sin(beta)*np.sin(theta_W)*np.tan(chi))\n",
+    "print(dVf)\n",
+    "print(epsilon)\n",
+    "print(chi)\n",
+    "print(np.cos(theta_W))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c22f4c44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8746197071393957\n",
+      "0.48480962024633706\n",
+      "-0.7480575296890004\n",
+      "0.000277155453224084\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.cos(theta_W))\n",
+    "print(np.sin(theta_W))\n",
+    "print(np.cos(29))\n",
+    "print(beta)"
    ]
   },
   {
