--- a/iDM-freze-out/relevant-codes/sin_chi.ipynb
+++ b/iDM-freze-out/relevant-codes/sin_chi.ipynb
@@ -282,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "e645eb2e",
+   "execution_count": 32,
+   "id": "bc368c3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.009589039741416241\n",
+      "0.0003077244409212016\n",
       "0.001\n",
       "0.00114335406787332\n",
       "0.8746197071393957\n"
@@ -298,8 +298,7 @@
     }
    ],
    "source": [
-    "dVf=(g_W/(2*np.cos(theta_W)))*(np.cos(theta_W)*(2*(np.sin(theta_W)**2)-0.5)+(3/2)*np.sin(beta)*np.sin(theta_W)*np.tan(chi))\n",
-    "print(dVf)\n",
+    "print(d_V_l)\n",
     "print(epsilon)\n",
     "print(chi)\n",
     "print(np.cos(theta_W))"
@@ -308,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c22f4c44",
+   "id": "a825ab92",
    "metadata": {},
    "outputs": [
     {
