--- a/iDM-freze-out/Relicmphi1/RelicYchi04/database.ipynb
+++ b/iDM-freze-out/Relicmphi1/RelicYchi04/database.ipynb
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a1afc76d",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "533d7fc1",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "5dce4ab2",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "ba5ca4b0",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "ea9e9fb3",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "       3.02, 3.03, 3.04])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "fe168ab2",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
        "       5.80961846e-04, 5.82122553e-04, 5.83266663e-04, 5.84408533e-04])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "f0154009",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
    ],
    "source": [
     "plt.plot(mass1, epsilon_actually_needed, label='Relic density',color = \"black\")\n",
-    "plt.title(r'Thermal iDM,  $\\delta= 0.3m_1$,  $m_{Z^i}=3m_1$,  $\\alpha_D=0.39$,  $Y_\\chi=0.04$,  $m_\\phi=1$ ')\n",
+    "plt.title(r'Thermal iDM,  $\\delta= 0.3m_1$,  $m_{Z^i}=3m_1$,  $\\alpha_D=0.39$,  $Y_\\chi=0.04$,  $m_\\phi=1$ GeV')\n",
     "plt.xlabel('$m_1$ [GeV]')\n",
     "plt.ylabel('$\\epsilon_D$')\n",
     "plt.xscale('log')\n",
