--- a/iDM-freze-out/PerSilvia/README
+++ b/iDM-freze-out/PerSilvia/README
@@ -1,1 +1,9 @@
-bnm,
+DA QUELLO CHE HO CAPITO:
+Senza HNL non esiste quella particella che fa da mediatore tra il dark neutrino e l'active neutrino. Questo almeno a livello di flavour. 
+Io ho messo le masse degli HNL molto alte, e quindi questi non vengono prodotti più dall'interazione scalare, che come avevamo visto si poteva accoppiare
+solo con neutrini...
+
+
+Mi sono reso conto che ho messo molto grandi anche le masse del dark neutrino.....
+
+Ora cambio
