--- a/iDM-freze-out/PerSilvia/README
+++ b/iDM-freze-out/PerSilvia/README
@@ -7,3 +7,9 @@ solo con neutrini...
 Mi sono reso conto che ho messo molto grandi anche le masse del dark neutrino.....
 
 Ora cambio
+
+Non cambia molto.
+
+Nel modello usato il dark neutrino si mixa bene con i 3 HNL, ma ha dei valori di mixing matrix bassi per tutti gli altri neutrini.
+
+Quindi gli HNL sono necessari al fine di avere un uso efficace dell'interazione scalare.
